--- a/admin/css/wp-messenger-customer-chat-plugin-admin.css
+++ b/admin/css/wp-messenger-customer-chat-plugin-admin.css
@@ -2,3 +2,8 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+.img-responsive, .size-full {
+	max-width: 100%; 
+	display:block; 
+	height: auto;
+}
